fix: solving header problems on safari(ios) devices, and pagination misalignment // for safari when i scroll up the header disappear

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,7 +49,7 @@ body {
 
 .nav-ul li {
   transition: 0.2s ease-in-out;
-  @apply py-1 px-3 cursor-pointer;
+  @apply py-1 px-3 cursor-pointer z-[9999];
 }
 .nav-ul li:hover {
   transition: 0.2s ease-in-out;
